Add ogen-go/ogen example
